// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Spacer ⚠️  With margin 1`] = `
<div
  className="sc-hqyNC xBAzG"
>
  <div
    className="sc-hEsumM kphJem"
  >
    <p
      className="sc-bxivhb kFVWeI"
    >
      This has a margin.
    </p>
  </div>
</div>
`;

exports[`Storyshots Spacer ⚠️  With padding 1`] = `
<div
  className="sc-hEsumM kphJem"
>
  <div
    className="sc-hqyNC cORRFV"
  >
    <p
      className="sc-bxivhb kFVWeI"
    >
      This has padding.
    </p>
  </div>
</div>
`;
